@@ -9,6 +9,7 @@ Version 1.0.3 to be released
 - Bug: CHttpRequest.hostInfo may give wrong port number (Qiang)
 - Bug: CHtml::activeListBox does not work when multiple selection is needed (Qiang)
 - Bug: Inconsistency in timezone of log messages for different log routes (Qiang)
+- New #136: Added support to CWebUser to allow directly accessing persistent properties (Qiang)
 - New: Upgraded jquery to 1.3.1 (Qiang)
 - New: Upgraded jquery star rating to 2.61 (Qiang)
 - New: Added skeleton application and refactored 'yiic webapp' command (Qiang)
